--- a/PLANT_PPE/Views/Received/DetailPPE_EQP.cshtml
+++ b/PLANT_PPE/Views/Received/DetailPPE_EQP.cshtml
@@ -83,7 +83,7 @@
                                 <td>@equip.LOC_FROM</td>
                                 <td>@equip.LOC_TO</td>
                                 <td>
-                                    <input type="date" class="form-control form-control-sm " id="txt_DateRecivSM" name="txt_DateRecivSM">
+                                    <input type="date" class="form-control form-control-sm datereceived" id="txt_DateRecivSM" name="txt_DateRecivSM">
                                     @*@if (equip.DATE_RECEIVED_SM == null)
                                     {
                                         <input type="date" onkeydown="return false" class="form-control form-control-sm " id="txt_DateRecivSM" name="txt_DateRecivSM">
