--- a/PLANT_PPE/Views/Shared/_Layout.cshtml
+++ b/PLANT_PPE/Views/Shared/_Layout.cshtml
@@ -24,6 +24,9 @@
         .input-file {
             width: 250px;
         }
+        .datereceived {
+            width: 140px;
+        }
     </style>
     <script src="~/Content/assets/js/lib/jquery.min.js"></script>
 
