--- a/PLANT_PPE/Views/Shared/_Layout.cshtml
+++ b/PLANT_PPE/Views/Shared/_Layout.cshtml
@@ -237,7 +237,7 @@
         var url = window.location;
 
         var element = $('ul.nav-main li a').filter(function () {
-            console.log(this.href);
+            //console.log(this.href);
             return this.href == url;
         });
         element.parent().parent().parent().addClass("open");
