--- a/PLANT_PPE/Views/Approval/PlantManager.cshtml
+++ b/PLANT_PPE/Views/Approval/PlantManager.cshtml
@@ -6,14 +6,31 @@
 }
 
 @*<input type="hidden" id="hd_PositionID" value="@Session["PositionID"]" />*@
-
-<h2 class="content-heading">Approval Plant Manager</h2>
-<div class="block block-rounded">
+@if (Session["PositionID"].ToString() == "KP1PT03")
+{
+    <h2 class="content-heading">Approval Plant Adm & Dev Manager</h2>
+    <div class="block-header block-header-default">
+        <h3 class="block-title">
+            Table Approval PPE <small>All list Approval Plant Adm & Dev Manager</small>
+        </h3>
+    </div>
+}
+else
+{
+    <h2 class="content-heading">Approval Plant Manager</h2>
     <div class="block-header block-header-default">
         <h3 class="block-title">
             Table Approval PPE <small>All list Approval Plant Manager</small>
         </h3>
     </div>
+}
+@*<h2 class="content-heading">Approval Plant Manager</h2>*@
+<div class="block block-rounded">
+    @*<div class="block-header block-header-default">
+        <h3 class="block-title">
+            Table Approval PPE <small>All list Approval Plant Manager</small>
+        </h3>
+    </div>*@
     <div class="block-content block-content-full">
         <table class="table table-bordered table-striped table-vcenter js-dataTable-responsive w-100" id="tbl_ppe">
             <thead class="text-center bg-primary text-white">
