--- a/PLANT_PPE/Views/Approval/DetailPPE_PM.cshtml
+++ b/PLANT_PPE/Views/Approval/DetailPPE_PM.cshtml
@@ -82,6 +82,7 @@
                     <label class="col-sm-4 col-form-label" for="txt_locTo">Loc To</label>
                     <div class="col-sm-8">
                         <input type="text" class="form-control form-control-sm " id="txt_locTo" name="txt_locTo" readonly>
+                        <input type="text" class="form-control form-control-sm " id="txtstatuss" name="txtstatuss" readonly hidden>
                     </div>
                 </div>
             </div>
