--- a/PLANT_PPE/Views/Setting/UserApprove.cshtml
+++ b/PLANT_PPE/Views/Setting/UserApprove.cshtml
@@ -111,6 +111,7 @@
                             <option selected>Pilih</option>
                             <option value="Section Head">Section Head</option>
                             <option value="Plant Manager">Plant Manager</option>
+                            <option value="Plant Adm & Dev Manager">Plant Adm & Dev Manager</option>
                             <option value="Plant Dept Head">Plant Dept Head</option>
                             <option value="PM Pengirim">PM Pengirim</option>
                             <option value="PM Penerima">PM Penerima</option>
