--- a/PLANT_PPE/Views/Shared/_Sidebar.cshtml
+++ b/PLANT_PPE/Views/Shared/_Sidebar.cshtml
@@ -20,10 +20,10 @@
                         if (sub.ID_Menu == item.ID_Menu)
                         {
                             <li class="nav-main-item">
-                                @*<a class="nav-main-link" href="@ViewBag.Path@sub.Link_Sub_Menu">
+                                <a class="nav-main-link" href="@ViewBag.Path@sub.Link_Sub_Menu">
                                     <span class="nav-main-link-name">@sub.Sub_Menu_Description</span>
-                                </a>*@
-                                @if (Session["PositionID"].ToString() == "KP1PT03")
+                                </a>
+                                @*@if (Session["PositionID"].ToString() == "KP1PT03")
                                 {
                                     <a class="nav-main-link" href="@ViewBag.Path@sub.Link_Sub_Menu">
                                         <span class="nav-main-link-name">Plant Adm & Dev Manager</span>
@@ -34,7 +34,7 @@
                                     <a class="nav-main-link" href="@ViewBag.Path@sub.Link_Sub_Menu">
                                         <span class="nav-main-link-name">@sub.Sub_Menu_Description</span>
                                     </a>
-                                }
+                                }*@
                             </li>
                         }
 
