--- a/PLANT_PPE/Views/Home/Index.cshtml
+++ b/PLANT_PPE/Views/Home/Index.cshtml
@@ -2,35 +2,23 @@
     ViewBag.Title = "Home Page";
 }
 
-@*<style>
-    .container {
-        position: relative;
-        width: 100%;
-        overflow: hidden;
-        padding-top: 56.25%; /* 16:9 Aspect Ratio */
-    }
+@*<h1>Dashboard</h1>*@
 
-    .responsive-iframe {
-        position: absolute;
-        top: 0;
-        left: 0;
-        bottom: 0;
-        right: 0;
-        width: 100%;
-        height: 100%;
-        border: none;
-    }
-</style>*@
-
-<h1>Dashboard</h1>
-
-<!--<!-- Main Container -->
-<!--<main id="main-container">-->
-<!-- Page Content -->
-<!--<div class="content">
-    <iframe class="responsive-iframe" src="https://bi.kppmining.com/kpp_bi/powerbi/PLANT/BACKLOG%20MONITORING%20?rs:embed=true"></iframe>
-</div>-->
-<!-- END Page Content -->
-<!--</main>-->
-<!-- END Main Container -->
-<!--@*<iframe class="responsive-iframe" src="https://bi.kppmining.com/kpp_bi/powerbi/PLANT/GEM%20REPORT%20?rs:embed=true"></iframe>*@-->
+<div class="row justify-content-center text-center">
+    <div class="col-md-6">
+        <div class="block-content">
+            <img class="img-fluid options-item" src="~/Content/assets/media/photos/main excell.png" alt="">
+        </div>
+    </div>
+</div>
+<div class="py-3 text-center">
+    <h2 class="fw-bold mb-2">
+        Permohonan Pemindahan Equipment (PPE)
+    </h2>
+    <h4 class="h5 text-muted">
+        PT Kalimantan Prima Persada
+    </h4>
+    @*<a class="btn btn-alt-primary px-4 py-3" href="/PPE/Review">
+        <i class="fa fa-paper-plane opacity-50 me-1"></i> Go to PPE Review
+    </a>*@
+</div>
