--- a/PLANT_PPE/Views/Setting/MappingApproval.cshtml
+++ b/PLANT_PPE/Views/Setting/MappingApproval.cshtml
@@ -1,11 +1,14 @@
 ﻿
 @{
-    ViewBag.Title = "Mammping Approval";
+    ViewBag.Title = "Mapping Approval";
     ViewBag.JS = "/Scripts/Page/MappingApproval.js";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
 <h2 class="content-heading">Setting Mapping Approval</h2>
+
+
+
 <div class="block block-rounded">
     <div class="block-header block-header-default">
         <h3 class="block-title">
@@ -20,6 +23,125 @@
         </div>
     </div>
     <div class="block-content block-content-full">
+        <div class="row">
+            <div class="col mb-3">
+                <div class="row mb-2">
+                    <div class="col-lg-1">
+                        <h3 class="block-title">Filter :</h3>
+                    </div>
+
+                    <div class="col">
+                        <select class="js-select2 form-select" id="actionfilter" name="apprv_action" style="width:100%">
+                            <option value="" selected>Approval Action</option>
+                            <option value="1">Approve</option>
+                            <option value="0">Reject</option>
+                        </select>
+                    </div>
+
+                    <div class="col ">
+                        <select class="js-select2 form-select" id="orderfilter" name="orderfilter" style="width: 100% ">
+                            <option value="" selected>Approval Order</option>
+                            <option value="1">1</option>
+                            <option value="2">2</option>
+                            <option value="3">3</option>
+                            <option value="4">4</option>
+                            <option value="5">5</option>
+                            <option value="6">6</option>
+                            <option value="7">7</option>
+                            <option value="8">8</option>
+
+                        </select>
+                    </div>
+
+                    <div class="col">
+                        <select class="js-select2 form-select" id="currentfilter" name="currentfilter" style="width: 100% ">
+                            <option value="" selected>Current Position</option>
+                        </select>
+                    </div>
+
+                    <div class="col ">
+                        <select class="js-select2 form-select" id="nextfilter" name="nextfilter" style="width: 100% " onchange="CobaCari()">
+                            <option value="" selected>Next Position</option>
+                        </select>
+                    </div>
+
+
+
+
+
+
+
+
+                </div>
+                <div class="row mb-2">
+                    <div class="col-lg-1">
+
+                    </div>
+                    <div class="col">
+                        @* <select class="js-select2 form-select" id="fromgilter" name="fromgilter" style="width:100%">
+                        <option value="" selected>From</option>
+                    </select>*@
+
+                        <input id="fromgilter" class="form-control" type="text" placeholder="District From" aria-label="default input example" value="" style="width:100%">
+                    </div>
+
+                    <div class="col">
+                        @* <select class="js-select2 form-select" id="tofilter" name="tofilter" style="width:100%">
+                        <option value="" selected>To</option>
+                    </select>*@
+                        <input id="tofilter" class="form-control" type="text" placeholder="District To" aria-label="default input example" value="" style="width:100%">
+
+                    </div>
+
+                    <div class="col ">
+                        @* <select class="js-select2 form-select" id="locFromfilter" name="locFromfilter" style="width:100%">
+                        <option value="" selected>Loc. From</option>
+                    </select>*@
+
+                        <input id="locFromfilter" class="form-control" type="text" placeholder="Location From" aria-label="default input example" value="" style="width:100%">
+                    </div>
+
+                    <div class="col ">
+                        @*<select class="js-select2 form-select" id="locTofilter" name="locTofilter" style="width:100%">
+                        <option value="" selected>Loc. To</option>
+                    </select>*@
+
+                        <input id="locTofilter" class="form-control" type="text" placeholder="Location To" aria-label="default input example" value="" style="width:100%">
+
+                    </div>
+                </div>
+
+
+                <div class="row ">
+                    <div class="col-lg-1">
+
+                    </div>
+                    <div class="col">
+                        @*<select class="js-select2 form-select" id="apprvStatusfilter" name="apprvStatusfilter" style="width:100%">
+                        <option value="" selected>Approval Status</option>
+                    </select>*@
+
+                        <textarea class="form-control" id="apprvStatusfilter" placeholder="Approval Status" rows="2"></textarea>
+                    </div>
+
+                    <div class="col">
+                        @*<select class="js-select2 form-select" id="statusfilter" name="statusfilter" style="width:100%">
+                        <option value="" selected>Status</option>
+                    </select>*@
+
+                        <textarea class="form-control" placeholder="Status" id="statusfilter" rows="2"></textarea>
+                    </div>
+
+
+                </div>
+            </div>
+
+            <div class="col-lg-1 d-flex justify-content-center align-items-center">
+                <button class="btn btn-primary btn-sm" onclick="CobaCari()"> FILTER </button>
+            </div>
+
+        </div>
+
         <table class="table table-bordered table-striped table-vcenter js-dataTable-responsive w-100" id="tbl_mappingApproval">
             <thead class="text-center">
                 <tr>
@@ -36,7 +158,7 @@
                     <th>ACTION </th>
                 </tr>
             </thead>
-            <tbody>
+            <tbody id="tableMapping">
             </tbody>
         </table>
     </div>
@@ -49,7 +171,7 @@
                 <div class="block-header block-header-default">
                     <h3 class="block-title">Register User's Group</h3>
                     <div class="block-options">
-                        <button type="button" class="btn-block-option" data-bs-dismiss="modal" aria-label="Close">
+                        <button type="button" class="btn-block-option" data-bs-dismiss="modal" aria-label="Close" onclick="cancelModal()">
                             <i class="fa fa-times"></i>
                         </button>
                     </div>
@@ -63,9 +185,7 @@
                                 <input id="apprv_no" hidden></input>
                                 <label class="form-label" for="txt_nrp">APPROVAL ACTION</label>
                                 <select class="js-select2 form-select select2-modal" id="txt_action" name="txt_action" style="width: 100%;">
-                                    <option>PILIH</option>
-                                    <option value="0">REJECT</option>
-                                    <option value="1">APPROVE</option>
+                                    
                                     @*@foreach (var item in ViewBag.dstrct)
             {
                 <option value="@item.DSTRCT_CODE">@item.DSTRCT_CODE</option>
@@ -185,7 +305,7 @@
 
                 </div>
                 <div class="block-content block-content-full block-content-sm text-end border-top">
-                    <button type="button" class="btn btn-alt-secondary" data-bs-dismiss="modal">
+                    <button type="button" class="btn btn-alt-secondary" data-bs-dismiss="modal" onclick="cancelModal()">
                         Cancel
                     </button>
                     <button id="buttonInsert" type="button" class="btn btn-alt-primary" onclick="insertMapApproval()">
@@ -355,3 +475,33 @@
         </div>
     </div>
 </div>-->
+
+@*<script>
+   // $('#fromgilter').addEventListener('input', handleInputChange);
+    const inputElement = document.getElementById('fromgilter');
+    const inputElement2 = document.getElementById('tofilter');
+    const inputElement3 = document.getElementById('locFromfilter');
+    const inputElement4 = document.getElementById('locTofilter');
+    const inputElement5 = document.getElementById('apprvStatusfilter');
+    const inputElement6 = document.getElementById('statusfilter');
+
+
+     
+
+    function handleInputChange() {
+        // Check if the input field has a value
+        if (inputElement.value.trim() !== '' || inputElement2.value.trim() !== '' || inputElement3.value.trim() !== '' || inputElement4.value.trim() !== '' || inputElement5.value.trim() !== '' || inputElement6.value.trim() !== '') {
+            // Run your function here
+            CobaCari();
+            // Call your function here, for example:
+            // yourFunction();
+        }
+    }
+        inputElement.addEventListener('input', handleInputChange);
+        inputElement2.addEventListener('input', handleInputChange);
+        inputElement3.addEventListener('input', handleInputChange);
+        inputElement4.addEventListener('input', handleInputChange);
+        inputElement5.addEventListener('input', handleInputChange);
+        inputElement6.addEventListener('input', handleInputChange);
+
+</script>*@
