--- a/PLANT_PPE/Views/Received/DetailPPE_EQP.cshtml
+++ b/PLANT_PPE/Views/Received/DetailPPE_EQP.cshtml
@@ -26,6 +26,12 @@
                         <input type="text" class="form-control form-control-sm " id="txt_date" name="txt_date" readonly>
                     </div>
                 </div>
+                <div class="row mb-3">
+                    <label class="col-sm-4 col-form-label" for="txt_note">Note</label>
+                    <div class="col-sm-8">
+                        <input type="text" class="form-control form-control-sm " id="txt_note" name="txt_note" readonly>
+                    </div>
+                </div>
             </div>
 
             <div class="col-sm-6 col-md-6">
