--- a/PLANT_PPE/Views/PPE/Register.cshtml
+++ b/PLANT_PPE/Views/PPE/Register.cshtml
@@ -214,7 +214,7 @@
                 <div class="block-header block-header-default">
                     <h3 class="block-title">Terms &amp; Conditions</h3>
                     <div class="block-options">
-                        <button type="button" class="btn-block-option" data-bs-dismiss="modal" aria-label="Close">
+                        <button type="button" class="btn-block-option" data-bs-dismiss="modal" aria-label="Close" id="closeModalButton">
                             <i class="fa fa-times"></i>
                         </button>
                     </div>
@@ -223,7 +223,7 @@
 
                 </div>
                 <div class="block-content block-content-full block-content-sm text-end border-top">
-                    <button type="button" class="btn btn-alt-primary" data-bs-dismiss="modal">
+                    <button type="button" class="btn btn-alt-primary" data-bs-dismiss="modal" id="acceptButton">
                         Accept
                     </button>
                 </div>
