--- a/PLANT_PPE/Views/Shared/_Layout.cshtml
+++ b/PLANT_PPE/Views/Shared/_Layout.cshtml
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="~/Content/assets/js/plugins/datatables-bs5/css/dataTables.bootstrap5.min.css">
     <link rel="stylesheet" href="~/Content/assets/js/plugins/datatables-buttons-bs5/css/buttons.bootstrap5.min.css">
     <link rel="stylesheet" href="~/Content/assets/js/plugins/datatables-responsive-bs5/css/responsive.bootstrap5.min.css">
+    <link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-beta.1/dist/css/select2.min.css" rel="stylesheet" />
 
     <!-- Fonts and Codebase framework -->
     <link rel="stylesheet" id="css-main" href="~/Content/assets/css/codebase.min.css">
@@ -24,6 +25,7 @@
         .input-file {
             width: 250px;
         }
+
         .datereceived {
             width: 140px;
         }
@@ -224,6 +226,7 @@
     <script src="~/Content/assets/js/plugins/ckeditor5-classic/build/ckeditor.js"></script>
     <script src="~/Content/assets/js/plugins/bootstrap-notify/bootstrap-notify.min.js"></script>
     <script src="~/Content/assets/js/plugins/jquery-validation/jquery.validate.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-beta.1/dist/js/select2.min.js"></script>
     @*<script src="~/Content/assets/js/plugins/jquery-validation/additional-methods.js"></script>
         <script src="~/Content/assets/js/pages/be_forms_validation.min.js"></script>*@
     <!-- Page JS Helpers (CKEditor 5 plugins) -->
