--- a/PLANT_PPE/Views/Approval/ProjectManagerPenerima.cshtml
+++ b/PLANT_PPE/Views/Approval/ProjectManagerPenerima.cshtml
@@ -44,8 +44,8 @@
                 <h3 class="block-title">Agreement's <small>Content Agreement's</small></h3>
             </div>
             <div class="block-content block-content-full">
-                <label class="col-sm-7" for="txtxt">*klik untuk membaca agreement</label>
                 <button type="button" class="btn btn-alt-primary" data-bs-toggle="modal" data-bs-target="#modal-terms" id="txtxt">Agreement's Approval</button>
+                <label class="col-sm-7" for="txtxt">*klik untuk membaca agreement</label>
             </div>
             <div class="block-content block-content-full block-content-sm bg-body-light fs-sm">
                 <div class="block-options justify-content-center">
@@ -95,7 +95,7 @@
                 <div class="block-header block-header-default">
                     <h3 class="block-title">Terms &amp; Conditions</h3>
                     <div class="block-options">
-                        <button type="button" class="btn-block-option" data-bs-dismiss="modal" aria-label="Close">
+                        <button type="button" class="btn-block-option" data-bs-dismiss="modal" aria-label="Close" id="closeModalButton">
                             <i class="fa fa-times"></i>
                         </button>
                     </div>
@@ -104,7 +104,7 @@
 
                 </div>
                 <div class="block-content block-content-full block-content-sm text-end border-top">
-                    <button type="button" class="btn btn-alt-primary" data-bs-dismiss="modal">
+                    <button type="button" class="btn btn-alt-primary" data-bs-dismiss="modal" id="acceptButton">
                         Accept
                     </button>
                 </div>
