--- a/PLANT_PPE/Views/Setting/DistrictLocation.cshtml
+++ b/PLANT_PPE/Views/Setting/DistrictLocation.cshtml
@@ -49,11 +49,13 @@
                 <div class="block-content fs-sm">
                     <div class="mb-4">
                         <label class="form-label" for="txt_district">District</label>
-                        <input type="text" class="form-control" id="txt_district" name="txt_district">
+                        <select class="js-select2 form-select" id="txt_district" name="txt_district" style="width: 100%;">
+                        </select>
                     </div>
                     <div class="mb-4">
                         <label class="form-label" for="txt_loc">Location</label>
-                        <input type="email" class="form-control" id="txt_loc" name="txt_loc">
+                        <select class="js-select2 form-select" id="txt_loc" name="txt_loc" style="width: 100%;">
+                        </select>
                     </div>
                 </div>
                 <div class="block-content block-content-full block-content-sm text-end border-top">
