--- a/PLANT_PPE/Views/Shared/_Sidebar.cshtml
+++ b/PLANT_PPE/Views/Shared/_Sidebar.cshtml
@@ -26,7 +26,7 @@
                                 @*@if (Session["PositionID"].ToString() == "KP1PT03")
                                 {
                                     <a class="nav-main-link" href="@ViewBag.Path@sub.Link_Sub_Menu">
-                                        <span class="nav-main-link-name">Plant Adm & Dev Manager</span>
+                                        <span class="nav-main-link-name">Account Profile</span>
                                     </a>
                                 }
                                 else
