--- a/PLANT_PPE/Views/Setting/MappingApproval.cshtml
+++ b/PLANT_PPE/Views/Setting/MappingApproval.cshtml
@@ -40,8 +40,8 @@
     </div>
 </div>
 
-<div class="modal" id="modal-insert" tabindex="-1" aria-labelledby="modal-normal" aria-modal="true" role="dialog">
-    <div class="modal-dialog" role="document">
+<div class="modal fade" id="modal-insert" tabindex="-1" role="dialog" aria-hidden="true" data-bs-backdrop="static">
+    <div class="modal-dialog modal-xl" role="document">
         <div class="modal-content">
             <div class="block block-rounded shadow-none mb-0">
                 <div class="block-header block-header-default">
@@ -52,43 +52,114 @@
                         </button>
                     </div>
                 </div>
-                <div class="block-content fs-sm">
-                    <div class="mb-4">
-                        <label class="form-label" for="approval_action">APPROVAL ACTION</label>
-                        <select class="js-select2 form-select" id="approval_action" name="approval_action" style="width: 100%;">
-                        </select>
+                @*<div class="block-content fs-sm">
+                    <div class="row justify-content-center">
+                        <div class="col-sm-6 col-md-6">
+                            <div class="row mb-3">
+                                <label class="col-sm-4 col-form-label" for="approval_action">APPROVAL ACTION</label>
+                                <select class="js-select2 form-select" id="approval_action" name="approval_action" style="width: 100%;">
+                                </select>
+                            </div>
+                            <div class="row mb-3">
+                                <label class="col-sm-4 col-form-label" for="approval_from">APPROVAL FROM</label>
+                                <select class="js-select2 form-select" id="approval_from" name="approval_from" style="width: 100%;">
+                                </select>
+                            </div>
+                            <div class="row mb-3">
+                                <label class="col-sm-4 col-form-label" for="curr_pos_id">CURRENT POSITION ID</label>
+                                <select class="js-select2 form-select" id="curr_pos_id" name="curr_pos_id" style="width: 100%;">
+                                </select>
+                            </div>
+                            <div class="row mb-3">
+                                <label class="col-sm-4 col-form-label" for="current_status">CURRENT STATUS</label>
+                                <input type="text" class="form-control form-control-sm" id="current_status" name="current_status">
+                            </div>
+                        </div>
+
+                        <div class="col-sm-6 col-md-6">
+                            <div class="row mb-3">
+                                <label class="col-sm-4 col-form-label" for="approval_order">APPROVAL ORDER</label>
+                                <input type="text" class="form-control form-control-sm" id="approval_order" name="approval_order">
+                            </div>
+                            <div class="row mb-3">
+                                <label class="col-sm-4 col-form-label" for="approval_to">APPROVAL TO</label>
+                                <select class="js-select2 form-select" id="approval_to" name="approval_to" style="width: 100%;">
+                                </select>
+                            </div>
+                            <div class="row mb-3">
+                                <label class="col-sm-4 col-form-label" for="next_pos_id">NEXT POSITION ID</label>
+                                <select class="js-select2 form-select" id="next_pos_id" name="next_pos_id" style="width: 100%;">
+                                </select>
+                            </div>
+                            <div class="row mb-3">
+                                <label class="col-sm-4 col-form-label" for="approval_status">APPROVAL STATUS</label>
+                                <input type="text" class="form-control form-control-sm" id="approval_status" name="approval_status">
+                            </div>
+                        </div>
                     </div>
-                    <div class="mb-4">
-                        <label class="form-label" for="approval_order">APPROVAL ORDER</label>
-                        <input type="text" class="form-control" id="approval_order" name="approval_order">
-                    </div>
-                    <div class="mb-4">
-                        <label class="form-label" for="approval_from">APPROVAL FROM</label>
-                        <select class="js-select2 form-select" id="approval_from" name="approval_from" style="width: 100%;">
-                        </select>
-                    </div>
-                    <div class="mb-4">
-                        <label class="form-label" for="approval_to">APPROVAL TO</label>
-                        <select class="js-select2 form-select" id="approval_to" name="approval_to" style="width: 100%;">
-                        </select>
-                    </div>
-                    <div class="mb-4">
-                        <label class="form-label" for="curr_pos_id">CURRENT POSITION ID</label>
-                        <select class="js-select2 form-select" id="curr_pos_id" name="curr_pos_id" style="width: 100%;">
-                        </select>
-                    </div>
-                    <div class="mb-4">
-                        <label class="form-label" for="next_pos_id">NEXT POSITION ID</label>
-                        <select class="js-select2 form-select" id="next_pos_id" name="next_pos_id" style="width: 100%;">
-                        </select>
-                    </div>
-                    <div class="mb-4">
-                        <label class="form-label" for="approval_status">APPROVAL STATUS</label>
-                        <input type="text" class="form-control" id="approval_status" name="approval_status">
-                    </div>
-                    <div class="mb-4">
-                        <label class="form-label" for="current_status">CURRENT STATUS</label>
-                        <input type="text" class="form-control" id="current_status" name="current_status">
+                </div>*@
+
+                @*baru*@
+                <div class="block-content">
+                    <div class="row justify-content-center">
+                        <div class="col-sm-6 col-md-6">
+                            <div class="row mb-4">
+                                <label class="col-sm-4 col-form-label" for="approval_action">Approval Action</label>
+                                <div class="col-sm-8">
+                                    <select class="js-select2 form-select" id="approval_action" name="approval_action" style="width: 100%;">
+                                    </select>
+                                </div>
+                            </div>
+                            <div class="row mb-4">
+                                <label class="col-sm-4 col-form-label" for="approval_from">Approval From</label>
+                                <div class="col-sm-8">
+                                    <select class="js-select2 form-select" id="approval_from" name="approval_from" style="width: 100%;">
+                                    </select>
+                                </div>
+                            </div>
+                            <div class="row mb-4">
+                                <label class="col-sm-4 col-form-label" for="curr_pos_id">Current Position ID</label>
+                                <div class="col-sm-8">
+                                    <select class="js-select2 form-select" id="curr_pos_id" name="curr_pos_id" style="width: 100%;">
+                                    </select>
+                                </div>
+                            </div>
+                            <div class="row mb-4">
+                                <label class="col-sm-4 col-form-label" for="current_status">Current Status</label>
+                                <div class="col-sm-8">
+                                    <input type="text" class="form-control form-control-sm " id="current_status" name="current_status" rows="7">
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="col-sm-6 col-md-6">
+                            <div class="row mb-4">
+                                <label class="col-sm-4 col-form-label" for="approval_order">Approval Order</label>
+                                <div class="col-sm-8">
+                                    <input type="text" class="form-control form-control-sm " id="approval_order" name="approval_order">
+                                </div>
+                            </div>
+                            <div class="row mb-4">
+                                <label class="col-sm-4 col-form-label" for="approval_to">Approval To</label>
+                                <div class="col-sm-8">
+                                    <select class="js-select2 form-select" id="approval_to" name="approval_to" style="width: 100%;">
+                                    </select>
+                                </div>
+                            </div>
+                            <div class="row mb-4">
+                                <label class="col-sm-4 col-form-label" for="next_pos_id">Next Position ID</label>
+                                <div class="col-sm-8">
+                                    <select class="js-select2 form-select" id="next_pos_id" name="next_pos_id" style="width: 100%;">
+                                    </select>
+                                </div>
+                            </div>
+                            <div class="row mb-4">
+                                <label class="col-sm-4 col-form-label" for="approval_status">Approval Status</label>
+                                <div class="col-sm-8">
+                                    <input type="text" class="form-control form-control-sm " id="approval_status" name="approval_status" rows="7">
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
                 <div class="block-content block-content-full block-content-sm text-end border-top">
@@ -104,8 +175,8 @@
     </div>
 </div>
 
-<div class="modal" id="modal_update" tabindex="-1" aria-labelledby="modal-normal" aria-modal="true" role="dialog">
-    <div class="modal-dialog" role="document">
+<div class="modal fade" id="modal_update" tabindex="-1" role="dialog" aria-hidden="true" data-bs-backdrop="static">
+    <div class="modal-dialog modal-xl" role="document">
         <div class="modal-content">
             <div class="block block-rounded shadow-none mb-0">
                 <div class="block-header block-header-default">
@@ -116,7 +187,7 @@
                         </button>
                     </div>
                 </div>
-                <div class="block-content fs-sm">
+                @*<div class="block-content fs-sm">
                     <div class="mb-4">
                         <input type="text" name="txt_id" id="txt_id" hidden />
                         <label class="form-label" for="approval_action_update">APPROVAL ACTION</label>
@@ -168,6 +239,71 @@
                     <div class="mb-4">
                         <label class="form-label" for="current_status_update">CURRENT STATUS</label>
                         <input type="text" class="form-control" id="current_status_update" name="current_status_update">
+                    </div>
+                </div>*@
+
+                @*baru*@
+                <div class="block-content">
+                    <div class="row justify-content-center">
+                        <div class="col-sm-6 col-md-6">
+                            <div class="row mb-4">
+                                <input type="text" name="txt_id" id="txt_id" hidden />
+                                <label class="col-sm-4 col-form-label" for="approval_action_update">Approval Action</label>
+                                <div class="col-sm-8">
+                                    <select class="js-select2 form-select" id="approval_action_update" name="approval_action_update" style="width: 100%;">
+                                    </select>
+                                </div>
+                            </div>
+                            <div class="row mb-4">
+                                <label class="col-sm-4 col-form-label" for="approval_from_update">Approval From</label>
+                                <div class="col-sm-8">
+                                    <select class="js-select2 form-select" id="approval_from_update" name="approval_from_update" style="width: 100%;">
+                                    </select>
+                                </div>
+                            </div>
+                            <div class="row mb-4">
+                                <label class="col-sm-4 col-form-label" for="curr_pos_id_update">Current Position ID</label>
+                                <div class="col-sm-8">
+                                    <select class="js-select2 form-select" id="curr_pos_id_update" name="curr_pos_id_update" style="width: 100%;">
+                                    </select>
+                                </div>
+                            </div>
+                            <div class="row mb-4">
+                                <label class="col-sm-4 col-form-label" for="current_status_update">Current Status</label>
+                                <div class="col-sm-8">
+                                    <input type="text" class="form-control form-control-sm " id="current_status_update" name="current_status_update">
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="col-sm-6 col-md-6">
+                            <div class="row mb-4">
+                                <label class="col-sm-4 col-form-label" for="approval_order_update">Approval Order</label>
+                                <div class="col-sm-8">
+                                    <input type="text" class="form-control form-control-sm " id="approval_order_update" name="approval_order_update">
+                                </div>
+                            </div>
+                            <div class="row mb-4">
+                                <label class="col-sm-4 col-form-label" for="approval_to_update">Approval To</label>
+                                <div class="col-sm-8">
+                                    <select class="js-select2 form-select" id="approval_to_update" name="approval_to_update" style="width: 100%;">
+                                    </select>
+                                </div>
+                            </div>
+                            <div class="row mb-4">
+                                <label class="col-sm-4 col-form-label" for="next_pos_id_update">Next Position ID</label>
+                                <div class="col-sm-8">
+                                    <select class="js-select2 form-select" id="next_pos_id_update" name="next_pos_id_update" style="width: 100%;">
+                                    </select>
+                                </div>
+                            </div>
+                            <div class="row mb-4">
+                                <label class="col-sm-4 col-form-label" for="approval_status_update">Approval Status</label>
+                                <div class="col-sm-8">
+                                    <input type="text" class="form-control form-control-sm " id="approval_status_update" name="approval_status_update">
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
                 <div class="block-content block-content-full block-content-sm text-end border-top">
